--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,25 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* MY PART */
+.modal {
+  padding: 10px;
+  gap: 10px;
+  display: flex;
+}
+.icon {
+  flex-shrink: 0;
+}
+
+.text {
+  padding-bottom: 18px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 10px;
+  font-size: 18px;
+  font-weight: 700;
+}
